--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,8 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+
+  --border-width-16: 16px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -23,4 +25,14 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@utility striped-bg {
+  background: repeating-linear-gradient(
+    45deg,
+    transparent, 
+    transparent 10px,
+    currentColor 10px,
+    currentColor 20px
+  );
 }
